--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ html {
 body {font-family: "Lato", sans-serif;}
 
 .tablink {
-  background-color: #181818;
-  color: white;
+  background-color: #00BCD4;
+  color: black;
   float: left;
   border: none;
   outline: none;
@@ -25,7 +25,7 @@ body {font-family: "Lato", sans-serif;}
 }
 
 .tablink:hover {
-  background-color: #777;
+  background-color: ghostwhite;
 }
 
 /* Style the tab content */
@@ -36,7 +36,7 @@ body {font-family: "Lato", sans-serif;}
   text-align: center;
 }
 
-#North {background-color:#181818;}
+#North {background-color:#060608;}
 #South {background-color:#181818;}
 #myBtn {
   display: none;
@@ -47,7 +47,7 @@ body {font-family: "Lato", sans-serif;}
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #2196f3;
+  background-color: ghostwhite;
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -100,33 +100,33 @@ body {font-family: "Lato", sans-serif;}
 </div>
 
 <div id="atr">
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#0'" id="defaultOpen">#</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#A'" id="defaultOpen">A</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#B'" id="defaultOpen">B</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#C'" id="defaultOpen">C</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#D'" id="defaultOpen">D</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#E'" id="defaultOpen">E</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#F'" id="defaultOpen">F</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#G'" id="defaultOpen">G</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#H'" id="defaultOpen">H</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#I'" id="defaultOpen">I</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#J'" id="defaultOpen">J</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#K'" id="defaultOpen">K</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#L'" id="defaultOpen">L</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#M'" id="defaultOpen">M</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#N'" id="defaultOpen">N</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#O'" id="defaultOpen">O</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#P'" id="defaultOpen">P</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#Q'" id="defaultOpen">Q</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#R'" id="defaultOpen">R</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#S'" id="defaultOpen">S</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#T'" id="defaultOpen">T</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#U'" id="defaultOpen">U</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#V'" id="defaultOpen">V</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#W'" id="defaultOpen">W</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#X'" id="defaultOpen">X</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#Y'" id="defaultOpen">Y</button>
-<button class="tablink" onclick="openCity('North', this, '#2196f3');;chBackcolor('#060608');location.href='#Z'" id="defaultOpen">Z</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#0'" id="defaultOpen">#</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#A'" id="defaultOpen">A</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#B'" id="defaultOpen">B</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#C'" id="defaultOpen">C</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#D'" id="defaultOpen">D</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#E'" id="defaultOpen">E</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#F'" id="defaultOpen">F</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#G'" id="defaultOpen">G</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#H'" id="defaultOpen">H</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#I'" id="defaultOpen">I</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#J'" id="defaultOpen">J</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#K'" id="defaultOpen">K</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#L'" id="defaultOpen">L</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#M'" id="defaultOpen">M</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#N'" id="defaultOpen">N</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#O'" id="defaultOpen">O</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#P'" id="defaultOpen">P</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#Q'" id="defaultOpen">Q</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#R'" id="defaultOpen">R</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#S'" id="defaultOpen">S</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#T'" id="defaultOpen">T</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#U'" id="defaultOpen">U</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#V'" id="defaultOpen">V</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#W'" id="defaultOpen">W</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#X'" id="defaultOpen">X</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#Y'" id="defaultOpen">Y</button>
+<button class="tablink" onclick="openCity('North', this, 'ghostwhite');;chBackcolor('#060608');location.href='#Z'" id="defaultOpen">Z</button>
 </div>
 <script>
 function chBackcolor(color) {
