--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ html {
 body {font-family: "Lato", sans-serif;}
 
 .tablink {
-  background-color: ghostwhite;
-  color: black;
+  background-color: black;
+  color: white;
   float: left;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+/*  padding: 14px 16px;*/
   font-size: 17px;
-  width: 3.704%;
+  width: 1.5%;
 }
 
 .tablink:hover {
@@ -98,9 +98,9 @@ body {font-family: "Lato", sans-serif;}
   <h1>Dark</h1>
   <p>When it is dark enough, you can see the stars.</p>
 </div>
-
-<div id="atr">
-<button class="tablink" onclick="openCity('North', this, 'darkgrey');;chBackcolor('black');location.href='#0'" id="defaultOpen">#</button>
+<div id="atr" class="sticky" style="height: 1;display: grid;">
+<button class="tablink" onclick="openCity('North', this, 'darkgrey');;chBackcolor('black');location.href='#North'" id="defaultOpen">#</button>
+<button class="tablink" onclick="openCity('North', this, 'darkgrey');;chBackcolor('black');location.href='#0'" id="defaultOpen">0</button>
 <button class="tablink" onclick="openCity('North', this, 'darkgrey');;chBackcolor('black');location.href='#A'" id="defaultOpen">A</button>
 <button class="tablink" onclick="openCity('North', this, 'darkgrey');;chBackcolor('black');location.href='#B'" id="defaultOpen">B</button>
 <button class="tablink" onclick="openCity('North', this, 'darkgrey');;chBackcolor('black');location.href='#C'" id="defaultOpen">C</button>
@@ -149,9 +149,8 @@ function openCity(cityName,elmnt,color) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
-<p><</p>
 <body>
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<!--<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>-->
 <script>
 //Get the button
 var mybutton = document.getElementById("myBtn");
@@ -179,7 +178,7 @@ function topFunction() {
       </div>
 </div>
 <!-- Games -->
-<a href=https://cdn.0065.cf/1001_Ultimate_Mahjong_NSW-CAF.nsp><img src=img/FAC-WSN_gnojhaM_etamitlU_1001.jpg></img></a>
+<a id="0" href=https://cdn.0065.cf/1001_Ultimate_Mahjong_NSW-CAF.nsp><img src=img/FAC-WSN_gnojhaM_etamitlU_1001.jpg></img></a>
 <a href=https://cdn.0065.cf/10_RETURNS_NSW-CAF.nsp><img src=img/FAC-WSN_SNRUTER_01.jpg></img></a>
 <a href=https://cdn.0065.cf/12_is_Better_Than_6_NSW-CAF.nsp><img src=img/FAC-WSN_6_nahT_retteB_si_21.jpg></img></a>
 <a href=https://cdn.0065.cf/12_Labours_of_Hercules_NSW-CAF.nsp><img src=img/FAC-WSN_selucreH_fo_sruobaL_21.jpg></img></a>
@@ -197,9 +196,9 @@ function topFunction() {
 <a href=https://cdn.0065.cf/99Moves_NSW-CAF.nsp><img src=img/FAC-WSN_sevoM99.jpg></img></a>
 <a href=https://cdn.0065.cf/99Seconds_NSW-CAF.nsp><img src=img/FAC-WSN_sdnoceS99.jpg></img></a>
 <a href=https://cdn.0065.cf/99Vidas_NSW-CAF.nsp><img src=img/FAC-WSN_sadiV99.jpg></img></a>
-<a id="A" href=https://cdn.0065.cf/ABC_Word-a-Pix_NSW-CAF.nsp><img src=img/FAC-WSN_xiP-a-droW_CBA.jpg></img></a>
+<a href=https://cdn.0065.cf/ABC_Word-a-Pix_NSW-CAF.nsp><img src=img/FAC-WSN_xiP-a-droW_CBA.jpg></img></a>
 <a href=https://cdn.0065.cf/Abyss_NSW-CAF.nsp><img src=img/FAC-WSN_ssybA.jpg></img></a>
-<a href=https://cdn.0065.cf/ACA_NEOGEO_2020_SUPER_BASEBALL_NSW-CAF.nsp><img src=img/FAC-WSN_LLABESAB_REPUS_0202_OEGOEN_ACA.jpg></img></a>
+<a id="A" href=https://cdn.0065.cf/ACA_NEOGEO_2020_SUPER_BASEBALL_NSW-CAF.nsp><img src=img/FAC-WSN_LLABESAB_REPUS_0202_OEGOEN_ACA.jpg></img></a>
 <a href=https://cdn.0065.cf/ACA_NEOGEO_3_COUNT_BOUT_NSW-CAF.nsp><img src=img/FAC-WSN_TUOB_TNUOC_3_OEGOEN_ACA.jpg></img></a>
 <a href=https://cdn.0065.cf/ACA_NEOGEO_AERO_FIGHTERS_2_NSW-CAF.nsp><img src=img/FAC-WSN_2_SRETHGIF_OREA_OEGOEN_ACA.jpg></img></a>
 <a href=https://cdn.0065.cf/ACA_NEOGEO_AERO_FIGHTERS_3_NSW-CAF.nsp><img src=img/FAC-WSN_3_SRETHGIF_OREA_OEGOEN_ACA.jpg></img></a>
@@ -408,7 +407,6 @@ function topFunction() {
 <a href=https://cdn.0065.cf/Asdivine_Hearts_II_NSW-CAF.nsp><img src=img/FAC-WSN_II_straeH_enividsA.jpg></img></a>
 <a href=https://cdn.0065.cf/Asdivine_Hearts_NSW-CAF.nsp><img src=img/FAC-WSN_straeH_enividsA.jpg></img></a>
 <a href=https://cdn.0065.cf/Asdivine_Menace_NSW-CAF.nsp><img src=img/FAC-WSN_ecaneM_enividsA.jpg></img></a>
-<a href=https://cdn.0065.cf/ASSASSINS_CREED_ODYSSEY_CLOUD_VERSION_NSW-CAF.nsp><img src=img/FAC-WSN_NOISREV_DUOLC_YESSYDO_DEERC_SNISSASSA.jpg></img></a>
 <a href=https://cdn.0065.cf/Assault_On_Metaltron_NSW-CAF.nsp><img src=img/FAC-WSN_nortlateM_nO_tluassA.jpg></img></a>
 <a href=https://cdn.0065.cf/Astro_Bears_NSW-CAF.nsp><img src=img/FAC-WSN_sraeB_ortsA.jpg></img></a>
 <a href=https://cdn.0065.cf/Astro_Bears_Party_NSW-CAF.nsp><img src=img/FAC-WSN_ytraP_sraeB_ortsA.jpg></img></a>
@@ -424,7 +422,6 @@ function topFunction() {
 <a href=https://cdn.0065.cf/A_Winters_Daydream_NSW-CAF.nsp><img src=img/FAC-WSN_maerdyaD_sretniW_A.jpg></img></a>
 <a href=https://cdn.0065.cf/Awkward_NSW-CAF.nsp><img src=img/FAC-WSN_drawkwA.jpg></img></a>
 <a href=https://cdn.0065.cf/Axiom_Verge_NSW-CAF.nsp><img src=img/FAC-WSN_egreV_moixA.jpg></img></a>
-<a href=https://cdn.0065.cf/Azkend_2_The_World_Beneath_NSW-CAF.nsp><img src=img/FAC-WSN_htaeneB_dlroW_ehT_2_dnekzA.jpg></img></a>
 <a id="B" href=https://cdn.0065.cf/Baba_Is_You_NSW-CAF.nsp><img src=img/FAC-WSN_uoY_sI_abaB.jpg></img></a>
 <a href=https://cdn.0065.cf/Back_in_1995_NSW-CAF.nsp><img src=img/FAC-WSN_5991_ni_kcaB.jpg></img></a>
 <a href=https://cdn.0065.cf/Back_To_Bed_NSW-CAF.nsp><img src=img/FAC-WSN_deB_oT_kcaB.jpg></img></a>
@@ -474,7 +471,6 @@ function topFunction() {
 <a href=https://cdn.0065.cf/Blossom_Tales_NSW-CAF.nsp><img src=img/FAC-WSN_selaT_mossolB.jpg></img></a>
 <a href=https://cdn.0065.cf/Bomb_Chicken_NSW-CAF.nsp><img src=img/FAC-WSN_nekcihC_bmoB.jpg></img></a>
 <a href=https://cdn.0065.cf/Bomber_Crew_NSW-CAF.nsp><img src=img/FAC-WSN_werC_rebmoB.jpg></img></a>
-<a href=https://cdn.0065.cf/BOMBFEST_NSW-CAF.nsp><img src=img/FAC-WSN_TSEFBMOB.jpg></img></a>
 <a href=https://cdn.0065.cf/Bombing_Busters_NSW-CAF.nsp><img src=img/FAC-WSN_sretsuB_gnibmoB.jpg></img></a>
 <a href=https://cdn.0065.cf/Bombslinger_NSW-CAF.nsp><img src=img/FAC-WSN_regnilsbmoB.jpg></img></a>
 <a href=https://cdn.0065.cf/Bonds_of_the_Skies_NSW-CAF.nsp><img src=img/FAC-WSN_seikS_eht_fo_sdnoB.jpg></img></a>
@@ -501,7 +497,6 @@ function topFunction() {
 <a href=https://cdn.0065.cf/Burger_Chef_Tycoon_NSW-CAF.nsp><img src=img/FAC-WSN_noocyT_fehC_regruB.jpg></img></a>
 <a href=https://cdn.0065.cf/BurgerTime_Party_NSW-CAF.nsp><img src=img/FAC-WSN_ytraP_emiTregruB.jpg></img></a>
 <a href=https://cdn.0065.cf/Burly_Men_at_Sea_NSW-CAF.nsp><img src=img/FAC-WSN_aeS_ta_neM_ylruB.jpg></img></a>
-<a href=https://cdn.0065.cf/Bus_Fix_2019_NSW-CAF.nsp><img src=img/FAC-WSN_9102_xiF_suB.jpg></img></a>
 <a href=https://cdn.0065.cf/BUTCHER_NSW-CAF.nsp><img src=img/FAC-WSN_REHCTUB.jpg></img></a>
 <a id="C" href=https://cdn.0065.cf/Cafeteria_Nipponica_NSW-CAF.nsp><img src=img/FAC-WSN_acinoppiN_airetefaC.jpg></img></a>
 <a href=https://cdn.0065.cf/Caged_Garden_Cock_Robin_NSW-CAF.nsp><img src=img/FAC-WSN_niboR_kcoC_nedraG_degaC.jpg></img></a>
@@ -510,7 +505,6 @@ function topFunction() {
 <a href=https://cdn.0065.cf/Calculation_Castle_Grecos_Ghostly_Challenge_Division_NSW-CAF.nsp><img src=img/FAC-WSN_noisiviD_egnellahC_yltsohG_socerG_eltsaC_noitaluclaC.jpg></img></a>
 <a href=https://cdn.0065.cf/Calculation_Castle_Grecos_Ghostly_Challenge_Multiplication_NSW-CAF.nsp><img src=img/FAC-WSN_noitacilpitluM_egnellahC_yltsohG_socerG_eltsaC_noitaluclaC.jpg></img></a>
 <a href=https://cdn.0065.cf/Calculation_Castle_Grecos_Ghostly_Challenge_Subtraction_NSW-CAF.nsp><img src=img/FAC-WSN_noitcartbuS_egnellahC_yltsohG_socerG_eltsaC_noitaluclaC.jpg></img></a>
-<a href=https://cdn.0065.cf/Captain_Cat_NSW-CAF.nsp><img src=img/FAC-WSN_taC_niatpaC.jpg></img></a>
 <a href=https://cdn.0065.cf/CAPTAIN_StarONE_NSW-CAF.nsp><img src=img/FAC-WSN_ENOratS_NIATPAC.jpg></img></a>
 <a href=https://cdn.0065.cf/Carcassonne_NSW-CAF.nsp><img src=img/FAC-WSN_ennossacraC.jpg></img></a>
 <a href=https://cdn.0065.cf/Car_Mayhem_NSW-CAF.nsp><img src=img/FAC-WSN_mehyaM_raC.jpg></img></a>
@@ -541,7 +535,6 @@ function topFunction() {
 <a href=https://cdn.0065.cf/Cinders_NSW-CAF.nsp><img src=img/FAC-WSN_sredniC.jpg></img></a>
 <a href=https://cdn.0065.cf/Circle_of_Sumo_NSW-CAF.nsp><img src=img/FAC-WSN_omuS_fo_elcriC.jpg></img></a>
 <a href=https://cdn.0065.cf/Classic_Games_Collection_Vol1_NSW-CAF.nsp><img src=img/FAC-WSN_1loV_noitcelloC_semaG_cissalC.jpg></img></a>
-<a href=https://cdn.0065.cf/Clock_Simulator_NSW-CAF.nsp><img src=img/FAC-WSN_rotalumiS_kcolC.jpg></img></a>
 <a href=https://cdn.0065.cf/Clouds_Sheep_2_NSW-CAF.nsp><img src=img/FAC-WSN_2_peehS_sduolC.jpg></img></a>
 <a href=https://cdn.0065.cf/ClusterPuck_99_NSW-CAF.nsp><img src=img/FAC-WSN_99_kcuPretsulC.jpg></img></a>
 <a href=https://cdn.0065.cf/Clustertruck_NSW-CAF.nsp><img src=img/FAC-WSN_kcurtretsulC.jpg></img></a>
@@ -560,7 +553,6 @@ function topFunction() {
 <a href=https://cdn.0065.cf/Crane_Game_Toreba_NSW-CAF.nsp><img src=img/FAC-WSN_aberoT_emaG_enarC.jpg></img></a>
 <a href=https://cdn.0065.cf/Crashlands_NSW-CAF.nsp><img src=img/FAC-WSN_sdnalhsarC.jpg></img></a>
 <a href=https://cdn.0065.cf/Crawl_NSW-CAF.nsp><img src=img/FAC-WSN_lwarC.jpg></img></a>
-<a href=https://cdn.0065.cf/CricktoGame_NSW-CAF.nsp><img src=img/FAC-WSN_emaGotkcirC.jpg></img></a>
 <a href=https://cdn.0065.cf/Crimsonland_NSW-CAF.nsp><img src=img/FAC-WSN_dnalnosmirC.jpg></img></a>
 <a href=https://cdn.0065.cf/Crocs_World_2_NSW-CAF.nsp><img src=img/FAC-WSN_2_dlroW_scorC.jpg></img></a>
 <a href=https://cdn.0065.cf/Crocs_World_NSW-CAF.nsp><img src=img/FAC-WSN_dlroW_scorC.jpg></img></a>
