--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="icon" href="favicon.png">
+<base target="_blank">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>CAF</title>
 <style>
@@ -23,7 +24,7 @@ img:hover {
   border: none;
   border-radius: 5px;
   color: white;
-  padding: 1px 2px;
+  padding: 1px 2px;ml
   text-align: center;
   text-decoration: none;
   display: inline-block;
