--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ img {
 }
 img:hover {
   bbox-shadow: 3px 3px 0px white;
-  filter: saturate(1.5);
-  border: 5px solid skyblue;
+  border: 5px solid #00BCD4;
   border-radius: 5px;
+  filter: drop-shadow(0px 2px 4px black)contrast(1.2);
 }
 .button {
   background-color: #00000030;
