--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 /* Set height of body and the document to 100% */
 body, html {
-  height: 100%;
+  height: auto;
   margin: 0;
   font-family: Arial;
   text-align: center;
@@ -54,7 +54,7 @@ img:hover {
   bbox-shadow: 3px 3px 0px white;
   border: 5px solid #00BCD4;
   border-radius: 5px;
-  filter: drop-shadow(0px 2px 4px black)saturate(1.3);
+  filter: drop-shadow(0px 2px 4px black)contrast(1.3);
 }
 </style>
 </head>
