--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body, html {
   height: 100%;
 }
 
-#Home {background-color: #002055;background-image: radial-gradient(ellipse 50% 70% at 50% 0,#510606 20%,#190202);}
+#Home {background-color: #002055;background-image: radial-gradient(ellipse 50% 70% at 50% 0,#d40000 20%,#6b0000);}
 #News {background-color: #002055;background-image: radial-gradient(ellipse 50% 70% at 50% 0,#002c74 20%,#001536);}
 
     
