--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ img:hover {
 </div>
 
 <div id="News" class="tabcontent">
+<a href="https://tinyurl.com/yyeu77ky"><img src=https://i.imgur.com/ltujzGf.jpg></a>
 <a href="https://tinyurl.com/y6hx5p5m"><img src=https://i.imgur.com/LNWaJq2.jpg></a>
 <a href="https://tinyurl.com/yyargs2s"><img src=https://i.imgur.com/lB6KzDw.jpg></a>
 <a href="https://tinyurl.com/y5kj58z5"><img src=https://i.imgur.com/PO03voB.jpg></a>
